--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Termos de Uso e Isenção de Responsabilidade do Yoshikawa Bot, um bot multifuncional para WhatsApp." />
+  <meta name="description" content="Termos de Uso e Isenção de Responsabilidade da Yoshikawa Bot, um bot multifuncional para WhatsApp." />
   <title>Termos de Uso - Yoshikawa Bot</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
