--- a/index.html
+++ b/index.html
@@ -179,71 +179,89 @@
 
   <div class="container">
     <h1>Termos de Uso e Isenção de Responsabilidade</h1>
-    <p><strong>Última atualização:</strong> 19 de julho de 2025</p>
+    <p><strong>Última atualização:</strong> 20 de julho de 2025</p>
 
     <section>
       <h2>1. Sobre a Yoshikawa Bot</h2>
       <p>
-        A Yoshikawa é um bot multifuncional para WhatsApp, desenvolvido por Kawa (<a href="https://instagram.com/kawalyansky" target="_blank" aria-label="Instagram de Kawa">@kawalyansky</a>), com recursos como criação de figurinhas, download de músicas, streaming de filmes, séries e animes, entre outros comandos.
+        A Yoshikawa é um bot multifuncional para WhatsApp, desenvolvido por Kawa (<a href="https://instagram.com/kawalyansky" target="_blank" aria-label="Instagram de Kawa">@kawalyansky</a>), com recursos como criação de figurinhas a partir de imagens e vídeos, acesso a links públicos de streaming de filmes, séries e animes, e outros comandos utilitários. O bot apenas facilita o acesso a conteúdos de terceiros, e a responsabilidade pela legalidade desses conteúdos é exclusiva dos usuários.
       </p>
     </section>
 
     <section>
       <h2>2. Condições de Uso</h2>
+      <p>
+        Ao usar a Yoshikawa Bot, você concorda com estes Termos de Uso, aceitando-os explicitamente por meio do comando (<code>!termos</code>).
+      </p>
       <ul>
         <li><strong>Uso permitido:</strong> Apenas para fins pessoais e legais, respeitando as regras do WhatsApp e a legislação vigente.</li>
         <li><strong>Restrições:</strong> É proibido usar a Yoshikawa para atividades ilegais, ofensivas, envio de spam ou violação de direitos autorais.</li>
         <li><strong>Grupos:</strong> O uso em grupos é de responsabilidade exclusiva dos usuários e administradores. O criador não exerce controle sobre essas interações.</li>
+        <li><strong>Suspensão:</strong> O acesso ao bot pode ser suspenso, sem aviso prévio, em caso de violação destes termos ou das políticas do WhatsApp.</li>
       </ul>
     </section>
 
     <section>
-      <h2>3. Isenção de Responsabilidade</h2>
+      <h2>3. Serviço de Aluguel</h2>
+      <p>
+        A Yoshikawa Bot é oferecido para uso em grupos mediante um modelo de aluguel.
+      </p>
+      <ul>
+        <li><strong>Período de Aluguel:</strong> O acesso ao bot é válido por 30 dias a partir do pagamento.</li>
+        <li><strong>Pagamento:</strong> O contratante deve realizar o pagamento dentro de 5 dias após o vencimento do período anterior para manter o acesso ativo.</li>
+        <li><strong>Sem Reembolso:</strong> Não haverá reembolso, total ou parcial, em caso de cancelamento ou suspensão do serviço por violação dos termos.</li>
+        <li><strong>Responsabilidade:</strong> O contratante é responsável por garantir que o uso do bot no grupo siga estes Termos de Uso.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>4. Isenção de Responsabilidade</h2>
       <p>O criador não se responsabiliza por:</p>
       <ul>
         <li><strong>Uso indevido:</strong> Conteúdos ou ações geradas pelos usuários.</li>
         <li><strong>Atividades em grupos:</strong> Interações, mensagens e mídias compartilhadas em grupos de WhatsApp.</li>
         <li><strong>Conteúdo de terceiros:</strong> Qualidade, legalidade ou disponibilidade de mídias acessadas via comandos do bot.</li>
-        <li><strong>Funcionamento:</strong> Falhas técnicas, interrupções ou instabilidades do serviço.</li>
-        <li><strong>Danos:</strong> Quaisquer prejuízos, diretos ou indiretos, decorrentes do uso da ferramenta.</li>
+        <li><strong>Funcionamento:</strong> Falhas técnicas, interrupções, instabilidades ou bloqueios impostos pelo WhatsApp.</li>
+        <li><strong>Danos:</strong> Quaisquer prejuízos, diretos, indiretos, incidentais ou consequenciais, incluindo perda de dados ou lucros, decorrentes do uso da ferramenta ou de conteúdos de terceiros.</li>
       </ul>
     </section>
 
     <section>
-      <h2>4. Propriedade Intelectual</h2>
+      <h2>5. Propriedade Intelectual</h2>
       <p>
-        Todo o código, funcionalidades e identidade da Yoshikawa Bot são de propriedade exclusiva do criador. Qualquer uso deve respeitar os direitos autorais e leis de propriedade intelectual.
+        Todo o código, funcionalidades e identidade da Yoshikawa Bot são de propriedade exclusiva do criador. Qualquer uso deve respeitar os direitos autorais e leis de propriedade intelectual. É expressamente proibido realizar engenharia reversa, descompilar ou tentar acessar o código-fonte do bot.
       </p>
     </section>
 
     <section>
-      <h2>5. Privacidade</h2>
+      <h2>6. Privacidade</h2>
       <p>
-        A Yoshikawa processa apenas os dados estritamente necessários para execução dos comandos, sem armazenamento permanente ou uso comercial dessas informações.
+        A Yoshikawa Bot coleta dados limitados, como números de telefone, mensagens enviadas e IDs de usuário, apenas para processar os comandos solicitados, em conformidade com a Lei Geral de Proteção de Dados (Lei 13.709/2018). Esses dados não são armazenados permanentemente nem utilizados para fins comerciais. Não compartilhamos seus dados com terceiros, exceto quando exigido pelas políticas do WhatsApp. Os dados são excluídos imediatamente após a execução do comando. Você tem o direito de acessar, corrigir ou solicitar a exclusão de seus dados, entrando em contato via <a href="mailto:yoshikawa_bot@proton.me" aria-label="E-mail de suporte">yoshikawa_bot@proton.me</a>.
       </p>
     </section>
 
     <section>
-      <h2>6. Alterações</h2>
+      <h2>7. Alterações</h2>
       <p>
-        Estes termos podem ser atualizados a qualquer momento. Mudanças serão publicadas neste site. O uso contínuo da Yoshikawa Bot implica na aceitação das novas condições.
+        Estes termos podem ser atualizados a qualquer momento. Mudanças serão publicadas neste site e notificadas via comando <code>!termos</code> no bot. O uso contínuo da Yoshikawa Bot implica na aceitação das novas condições.
       </p>
     </section>
 
     <section>
-      <h2>7. Contato</h2>
+      <h2>8. Contato</h2>
       <p>
         Dúvidas, sugestões ou suporte:<br>
         WhatsApp: <a href="https://wa.me/18589258076" aria-label="WhatsApp">+1 858 925-8076</a><br>
-        Instagram: <a href="https://instagram.com/kawalyansky" target="_blank" aria-label="Instagram">@kawalyansky</a>
+        Instagram: <a href="https://instagram.com/kawalyansky" target="_blank" aria-label="Instagram">@kawalyansky</a><br>
+        E-mail: <a href="mailto:yoshikawa_bot@proton.me" aria-label="E-mail de suporte">yoshikawa_bot@proton.me</a> (para solicitações formais, como exclusão de dados).
       </p>
       <a href="https://wa.me/18589258076" class="cta-button" aria-label="Contato via WhatsApp">Entrar em Contato</a>
     </section>
 
     <section>
-      <h2>8. Lei Aplicável</h2>
+      <h2>9. Lei Aplicável</h2>
       <p>
-        Estes termos são regidos pela legislação da jurisdição do criador.
+        Estes termos são regidos pelas leis do Brasil.
       </p>
     </section>
 
