--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <section>
       <h2>2. Condições de Uso</h2>
       <p>
-        Ao usar a Yoshikawa Bot, você concorda com estes Termos de Uso, aceitando-os explicitamente por meio do comando (<code>!termos</code>).
+        Ao usar a Yoshikawa Bot, você concorda com estes Termos de Uso, aceitando-os explicitamente por meio do comando <code>!termos</code>.
       </p>
       <ul>
         <li><strong>Uso permitido:</strong> Apenas para fins pessoais e legais, respeitando as regras do WhatsApp e a legislação vigente.</li>
