--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <section>
       <h2>3. Serviço de Aluguel</h2>
       <p>
-        A Yoshikawa Bot é oferecido para uso em grupos mediante um modelo de aluguel.
+        A Yoshikawa Bot é oferecida para uso em grupos mediante um modelo de aluguel.
       </p>
       <ul>
         <li><strong>Período de Aluguel:</strong> O acesso ao bot é válido por 30 dias a partir do pagamento.</li>
