--- a/index.html
+++ b/index.html
@@ -184,91 +184,90 @@
     <section>
       <h2>1. Sobre a Yoshikawa Bot</h2>
       <p>
-        A Yoshikawa é um bot multifuncional para WhatsApp, desenvolvido por Kawa (<a href="https://instagram.com/kawalyansky" target="_blank" aria-label="Instagram de Kawa">@kawalyansky</a>), com recursos como criação de figurinhas a partir de imagens e vídeos, acesso a links públicos de streaming de filmes, séries e animes, e outros comandos utilitários. O bot apenas facilita o acesso a conteúdos de terceiros, e a responsabilidade pela legalidade desses conteúdos é exclusiva dos usuários.
+        A Yoshikawa Bot é uma ferramenta multifuncional para WhatsApp, desenvolvida por Kawa, que oferece recursos como criação de figurinhas, acesso a links públicos de conteúdo de streaming e outros comandos utilitários. O bot atua como um facilitador, e a responsabilidade sobre a legalidade e o uso do conteúdo acessado é inteiramente dos usuários.
       </p>
     </section>
 
     <section>
-      <h2>2. Condições de Uso</h2>
+      <h2>2. Aceitação e Condições de Uso</h2>
       <p>
-        Ao usar a Yoshikawa Bot, você concorda com estes Termos de Uso, aceitando-os automaticamente e podendo revisá-los por meio do comando <code>!termos</code>.
+        Ao interagir com a Yoshikawa Bot, você expressa sua concordância integral com estes Termos de Uso. A versão mais recente dos termos pode ser consultada a qualquer momento através do comando <code>!termos</code>.
       </p>
       <ul>
-        <li><strong>Uso permitido:</strong> Apenas para fins pessoais e legais, respeitando as regras do WhatsApp e a legislação vigente.</li>
-        <li><strong>Restrições:</strong> É proibido usar a Yoshikawa para atividades ilegais, ofensivas, envio de spam ou violação de direitos autorais.</li>
-        <li><strong>Grupos:</strong> O uso em grupos é de responsabilidade exclusiva dos usuários e administradores. O criador não exerce controle sobre essas interações.</li>
-        <li><strong>Suspensão:</strong> O acesso ao bot pode ser suspenso, sem aviso prévio, em caso de violação destes termos ou das políticas do WhatsApp.</li>
+        <li><strong>Uso Permitido:</strong> A ferramenta destina-se a fins pessoais e lícitos, em conformidade com as regras do WhatsApp e a legislação vigente.</li>
+        <li><strong>Restrições:</strong> É estritamente proibido utilizar o bot para atividades ilegais, disseminação de conteúdo ofensivo, spam, assédio ou violação de direitos autorais e de propriedade intelectual.</li>
+        <li><strong>Responsabilidade em Grupos:</strong> O uso do bot em grupos é de responsabilidade exclusiva de seus membros e administradores. O desenvolvedor não possui controle sobre as interações realizadas nesses ambientes.</li>
+        <li><strong>Suspensão de Acesso:</strong> O acesso ao bot poderá ser suspenso ou encerrado, sem aviso prévio, caso haja violação destes termos ou das políticas do WhatsApp.</li>
       </ul>
     </section>
 
     <section>
       <h2>3. Serviço de Aluguel</h2>
       <p>
-        A Yoshikawa Bot é oferecida para uso em grupos mediante um modelo de aluguel.
+        A Yoshikawa Bot pode ser adicionada a grupos privados mediante um modelo de assinatura (aluguel).
       </p>
       <ul>
-        <li><strong>Período de Aluguel:</strong> O acesso ao bot é válido por 30 dias a partir do pagamento.</li>
-        <li><strong>Pagamento:</strong> O contratante deve realizar o pagamento dentro de 5 dias após o vencimento do período anterior para manter o acesso ativo.</li>
-        <li><strong>Sem Reembolso:</strong> Não haverá reembolso, total ou parcial, em caso de cancelamento ou suspensão do serviço por violação dos termos.</li>
-        <li><strong>Responsabilidade:</strong> O contratante é responsável por garantir que o uso do bot no grupo siga estes Termos de Uso.</li>
+        <li><strong>Período de Validade:</strong> O acesso ao bot é liberado por 30 dias, contados a partir da data de confirmação do pagamento.</li>
+        <li><strong>Renovação:</strong> Para garantir a continuidade do serviço, o contratante deve efetuar o pagamento da renovação em até 5 dias após o término do ciclo anterior.</li>
+        <li><strong>Política de Reembolso:</strong> Não haverá reembolso, total ou parcial, em caso de cancelamento por parte do contratante ou de suspensão do serviço por violação destes termos.</li>
+        <li><strong>Responsabilidade do Contratante:</strong> O contratante é o único responsável por assegurar que a utilização do bot no grupo esteja em conformidade com estes Termos de Uso.</li>
       </ul>
     </section>
 
     <section>
       <h2>4. Isenção de Responsabilidade</h2>
-      <p>O criador não se responsabiliza por:</p>
+      <p>O desenvolvedor da Yoshikawa Bot não se responsabiliza por:</p>
       <ul>
-        <li><strong>Uso indevido:</strong> Conteúdos ou ações geradas pelos usuários.</li>
-        <li><strong>Atividades em grupos:</strong> Interações, mensagens e mídias compartilhadas em grupos de WhatsApp.</li>
-        <li><strong>Conteúdo de terceiros:</strong> Qualidade, legalidade ou disponibilidade de mídias acessadas via comandos do bot.</li>
-        <li><strong>Funcionamento:</strong> Falhas técnicas, interrupções, instabilidades ou bloqueios impostos pelo WhatsApp.</li>
-        <li><strong>Danos:</strong> Quaisquer prejuízos, diretos, indiretos, incidentais ou consequenciais, incluindo perda de dados ou lucros, decorrentes do uso da ferramenta ou de conteúdos de terceiros.</li>
+        <li><strong>Uso Indevido:</strong> Quaisquer conteúdos, ações ou consequências geradas pelos usuários através do bot.</li>
+        <li><strong>Atividades em Grupos:</strong> Interações, mensagens ou mídias compartilhadas em grupos que utilizam o bot.</li>
+        <li><strong>Conteúdo de Terceiros:</strong> A qualidade, legalidade, disponibilidade ou segurança de mídias e links acessados através dos comandos.</li>
+        <li><strong>Disponibilidade do Serviço:</strong> Falhas técnicas, interrupções, instabilidades ou bloqueios impostos pela plataforma do WhatsApp.</li>
+        <li><strong>Danos:</strong> Quaisquer prejuízos diretos, indiretos, incidentais ou consequenciais, incluindo perda de dados ou lucros, decorrentes do uso ou da incapacidade de usar a ferramenta.</li>
       </ul>
     </section>
 
     <section>
       <h2>5. Propriedade Intelectual</h2>
       <p>
-        Todo o código, funcionalidades e identidade da Yoshikawa Bot são de propriedade exclusiva do criador. Qualquer uso deve respeitar os direitos autorais e leis de propriedade intelectual. É expressamente proibido realizar engenharia reversa, descompilar ou tentar acessar o código-fonte do bot.
+        O código-fonte, as funcionalidades, o nome e a identidade visual da Yoshikawa Bot são propriedade exclusiva de seu desenvolvedor. É expressamente proibida a cópia, modificação, distribuição, engenharia reversa, descompilação ou qualquer tentativa de acesso não autorizado ao código-fonte do bot.
       </p>
     </section>
 
     <section>
-      <h2>6. Privacidade</h2>
+      <h2>6. Política de Privacidade</h2>
       <p>
-        A Yoshikawa Bot coleta dados limitados, como números de telefone, mensagens enviadas e IDs de usuário, apenas para processar os comandos solicitados, em conformidade com a Lei Geral de Proteção de Dados (Lei 13.709/2018). Esses dados não são armazenados permanentemente nem utilizados para fins comerciais. Não compartilhamos seus dados com terceiros, exceto quando exigido pelas políticas do WhatsApp. Os dados são excluídos imediatamente após a execução do comando. Você tem o direito de acessar, corrigir ou solicitar a exclusão de seus dados, entrando em contato via <a href="mailto:yoshikawa_bot@proton.me" aria-label="E-mail de suporte">yoshikawa_bot@proton.me</a>.
+        A Yoshikawa Bot processa dados mínimos e temporários — como número de telefone, ID de usuário e mensagens — estritamente para executar os comandos solicitados, em conformidade com a Lei Geral de Proteção de Dados (Lei nº 13.709/2018). Os dados são descartados imediatamente após o processamento do comando e não são armazenados permanentemente ou utilizados para fins comerciais. Nenhuma informação será compartilhada com terceiros, exceto por exigência legal ou das políticas do WhatsApp. Para solicitar acesso ou exclusão de seus dados, entre em contato pelo e-mail: <a href="mailto:yoshikawa_bot@proton.me" aria-label="E-mail de suporte">yoshikawa_bot@proton.me</a>.
       </p>
     </section>
 
     <section>
-      <h2>7. Alterações</h2>
+      <h2>7. Alterações nos Termos</h2>
       <p>
-        Estes termos podem ser atualizados a qualquer momento. Mudanças serão publicadas neste site e notificadas via comando <code>!termos</code> no bot. O uso contínuo da Yoshikawa Bot implica na aceitação das novas condições.
+        Estes termos podem ser atualizados periodicamente para refletir melhorias ou mudanças no serviço. As alterações entram em vigor no momento de sua publicação nesta página. O uso contínuo da Yoshikawa Bot após as modificações implica a aceitação das novas condições.
       </p>
     </section>
 
     <section>
       <h2>8. Contato</h2>
       <p>
-        Dúvidas, sugestões ou suporte:<br>
+        Para dúvidas, sugestões ou suporte técnico, utilize os canais abaixo:<br>
         WhatsApp: <a href="https://wa.me/18589258076" aria-label="WhatsApp">+1 858 925-8076</a><br>
-        Instagram: <a href="https://instagram.com/kawalyansky" target="_blank" aria-label="Instagram">@kawalyansky</a><br>
-        E-mail: <a href="mailto:yoshikawa_bot@proton.me" aria-label="E-mail de suporte">yoshikawa_bot@proton.me</a> (para solicitações formais, como exclusão de dados).
+        E-mail: <a href="mailto:yoshikawa_bot@proton.me" aria-label="E-mail de suporte">yoshikawa_bot@proton.me</a> (para solicitações formais e de privacidade).
       </p>
       <a href="https://wa.me/18589258076" class="cta-button" aria-label="Contato via WhatsApp">Entrar em Contato</a>
     </section>
 
     <section>
-      <h2>9. Lei Aplicável</h2>
+      <h2>9. Legislação Aplicável</h2>
       <p>
-        Estes termos são regidos pelas leis do Brasil.
+        Estes Termos de Uso são regidos e interpretados de acordo com as leis da República Federativa do Brasil.
       </p>
     </section>
 
     <section>
       <h2>Isenção Final</h2>
       <p>
-        A Yoshikawa Bot é fornecida "no estado em que se encontra". O criador não se responsabiliza por mau uso, danos decorrentes, nem por qualquer consequência originada a partir do uso do bot.
+        A Yoshikawa Bot é uma ferramenta fornecida "no estado em que se encontra" (as is). O desenvolvedor se isenta de qualquer responsabilidade por mau uso, danos ou consequências adversas originadas a partir da utilização do bot. Use por sua conta e risco.
       </p>
     </section>
   </div>
