--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
   <div class="container">
     <h1>Termos de Uso e Isenção de Responsabilidade</h1>
-    <p><strong>Última atualização:</strong> 20 de julho de 2025</p>
+    <p><strong>Última atualização:</strong> 19 de setembro de 2025</p>
 
     <section>
       <h2>1. Sobre a Yoshikawa Bot</h2>
@@ -213,9 +213,19 @@
         <li><strong>Responsabilidade do Contratante:</strong> O contratante é o único responsável por assegurar que a utilização do bot no grupo esteja em conformidade com estes Termos de Uso.</li>
       </ul>
     </section>
+    
+    <section>
+      <h2>4. Sistema de Bots Filhos (Réplicas)</h2>
+      <p>
+        Oferecemos um sistema de "bots filhos", que funcionam como réplicas do bot principal, conectando-se diretamente a um servidor central Node.js através do comando <code>!yoshikawa</code>. Esses bots possuem todas as funcionalidades da versão principal e são disponibilizados em um modelo de aluguel mensal.
+      </p>
+      <p>
+        O criador não possui nenhuma responsabilidade ou supervisão sobre como ou onde o sistema de bots filhos é utilizado. O serviço consiste unicamente no fornecimento de réplicas do bot principal, que é, por sua natureza, uma ferramenta inofensiva. A responsabilidade por qualquer uso indevido, ilegal ou que viole os termos de serviço de plataformas de terceiros é exclusiva do contratante.
+      </p>
+    </section>
 
     <section>
-      <h2>4. Isenção de Responsabilidade</h2>
+      <h2>5. Isenção de Responsabilidade</h2>
       <p>O desenvolvedor da Yoshikawa Bot não se responsabiliza por:</p>
       <ul>
         <li><strong>Uso Indevido:</strong> Quaisquer conteúdos, ações ou consequências geradas pelos usuários através do bot.</li>
@@ -227,28 +237,28 @@
     </section>
 
     <section>
-      <h2>5. Propriedade Intelectual</h2>
+      <h2>6. Propriedade Intelectual</h2>
       <p>
         O código-fonte, as funcionalidades, o nome e a identidade visual da Yoshikawa Bot são propriedade exclusiva de seu desenvolvedor. É expressamente proibida a cópia, modificação, distribuição, engenharia reversa, descompilação ou qualquer tentativa de acesso não autorizado ao código-fonte do bot.
       </p>
     </section>
 
     <section>
-      <h2>6. Política de Privacidade</h2>
+      <h2>7. Política de Privacidade</h2>
       <p>
         A Yoshikawa Bot processa dados mínimos e temporários — como número de telefone, ID de usuário e mensagens — estritamente para executar os comandos solicitados, em conformidade com a Lei Geral de Proteção de Dados (Lei nº 13.709/2018). Os dados são descartados imediatamente após o processamento do comando e não são armazenados permanentemente ou utilizados para fins comerciais. Nenhuma informação será compartilhada com terceiros, exceto por exigência legal ou das políticas do WhatsApp. Para solicitar acesso ou exclusão de seus dados, entre em contato pelo e-mail: <a href="mailto:yoshikawa_bot@proton.me" aria-label="E-mail de suporte">yoshikawa_bot@proton.me</a>.
       </p>
     </section>
 
     <section>
-      <h2>7. Alterações nos Termos</h2>
+      <h2>8. Alterações nos Termos</h2>
       <p>
         Estes termos podem ser atualizados periodicamente para refletir melhorias ou mudanças no serviço. As alterações entram em vigor no momento de sua publicação nesta página. O uso contínuo da Yoshikawa Bot após as modificações implica a aceitação das novas condições.
       </p>
     </section>
 
     <section>
-      <h2>8. Contato</h2>
+      <h2>9. Contato</h2>
       <p>
         Para dúvidas, sugestões ou suporte técnico, utilize os canais abaixo:<br>
         WhatsApp: <a href="https://wa.me/18589258076" aria-label="WhatsApp">+1 858 925-8076</a><br>
@@ -258,14 +268,14 @@
     </section>
 
     <section>
-      <h2>9. Legislação Aplicável</h2>
+      <h2>10. Legislação Aplicável</h2>
       <p>
         Estes Termos de Uso são regidos e interpretados de acordo com as leis da República Federativa do Brasil.
       </p>
     </section>
 
     <section>
-      <h2>Isenção Final</h2>
+      <h2>11. Isenção Final</h2>
       <p>
         A Yoshikawa Bot é uma ferramenta fornecida "no estado em que se encontra" (as is). O desenvolvedor se isenta de qualquer responsabilidade por mau uso, danos ou consequências adversas originadas a partir da utilização do bot. Use por sua conta e risco.
       </p>
